agregue los puntos

--- a/pages/seccion.html
+++ b/pages/seccion.html
@@ -8,13 +8,13 @@
     <meta name="description" content="esta es mi primera página web">
     <meta name="keywords" content="mi proyecto final, desarrollo web, gisela soledad avalos">
     <title>Mi proyecto final-Gisela Soledad Avalos</title>
-    <link rel="stylesheet" href="/css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <div class="holder">
-    <img class= "logo-img" src="/img/gatitologo.png" width=100 alt="logo">
+    <img class= "logo-img" src="./img/gatitologo.png" width=100 alt="logo">
     <h1 class="logo"> Irina Style</h1>
 </div>
 </header>
@@ -60,28 +60,28 @@
 <h2>Así somos</h2>
 <div class="personas">
     <div class="persona">
-    <img src="/img/agustin simone.jpg" alt="agustin">
+    <img src="./img/agustin simone.jpg" alt="agustin">
     <h5>Agustin Simone</h5>
     <h6>Asesor</h6>
     <p>Colaborador atento y diligente que siempre cumple con sus tareas de manera eficiente y precisa. </p>
 </div>
 <div class="personas">
     <div class="persona">
-    <img src="/img/claudia gonzalez.jpg" alt="claudia">
+    <img src="./img/claudia gonzalez.jpg" alt="claudia">
     <h5>Claudia Gonzalez</h5>
     <h6>Asesor</h6>
     <p> Siempre cumple con sus tareas de manera oportuna y con un alto nivel de calidad. Es proactiva, identifica oportunidades de mejora y aporta ideas creativas para resolver problemas. </p>
 </div>
 <div class="personas">
     <div class="persona">
-    <img src="/img/jenna banz.jpg" alt="jenna">
+    <img src="./img/jenna banz.jpg" alt="jenna">
     <h5>Jenna Banz</h5>
     <h6>Asesor</h6>
     <p> Su capacidad para mantener un seguimiento de múltiples tareas y proyectos simultáneamente es impresionante. Siempre cumple con los plazos establecidos y se asegura de que cada detalle sea atendido. </p>
 </div>
 <div class="personas">
     <div class="persona">
-    <img src="/img/sebastian santos.jpg" alt="sebastian">
+    <img src="./img/sebastian santos.jpg" alt="sebastian">
     <br>
     <h5>Agustin Simone</h5>
     <h6>Asesor</h6>
@@ -89,7 +89,7 @@
 </div>
 <div class="personas">
     <div class="persona">
-    <img src="/img/victor herrera.jpg" alt="victor">
+    <img src="./img/victor herrera.jpg" alt="victor">
     <br>
     <h5>Victor Herrera</h5>
     <h6>Asesor</h6>
