--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
     <meta name="keywords" content="mi primera pagina, desarrollo web, gisela soledad avalos">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https: //fonts.googleapis.com/css2? family= Lato:ital,wght@0,100;0,300;0,400;1,700;1,900 & display=swap" rel="stylesheet"></enlace>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
 
 
     <header>
-        <img class="logo" src="./img/gatitologo.png" alt="Logo">
+        <img class="logo" src="../img/gatitologo.png" alt="Logo">
         <button id="abrir" class="abrir-menu"><i class="bi bi-list"></i></button>
         <nav class="nav visible" id="nav">
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
                 <li><a href="index.html" target="_blank">Inicio</a></li>
-                <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-                <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
-                <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
-                <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
+                <li><a href="../pages/seccion.html" target="_blank">Nosotros</a></li>
+                <li><a href="../pages/servicios.html" target="_blank">Productos</a></li>
+                <li><a href="../pages/contacto.html" target="_blank">Contacto</a></li>
+                <li><a href="../pages/galeria.html" target="_blank">Galeria</a></li>
             </ul>
         </nav>
     </header>
     <section class="inicio">
-        <video class="video-slide" src="./media/tienda.mp4"  autoplay muted loop> </video>
+        <video class="video-slide" src="../media/tienda.mp4"  autoplay muted loop> </video>
             <div class="content">
             <h1><strong>Somos <br></strong>Irina <br>  Style</h1>
             <p>Un encantador establecimiento ubicado en el corazón de la ciudad.
@@ -45,7 +45,7 @@
     
     </div>
     </section>
-    <script src="./scripts/js.js"></script>
+    <script src="../scripts/js.js"></script>
     </body>
     </html>
 
