--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -8,24 +8,24 @@
     <meta name="description" content="esta es mi primera página web">
     <meta name="keywords" content="mi proyecto final, desarrollo web, gisela soledad avalos">
     <title>Mi proyecto final-Gisela Soledad Avalos</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     </head>
     <body>
     <header>
         <div class="holder">
-        <img class= "logo-img" src="/img/gatitologo.png" width=100 alt="gatito-img">
+        <img class= "logo-img" src="../img/gatitologo.png" width=100 alt="gatito-img">
         <h1 class="logo"> Irina Style</h1>
         </div>
     </header>
     <nav>
         <div class="activo">
         <ul>
-        <li><a class="activo" href="./index.html" target="_blank">Inicio</a></li>
-        <li><a class="activo" href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-        <li><a class="activo" href="./pages/servicios.html" target="_blank">Productos </a></li>
-        <li><a class="activo" href="./pages/contacto.html" target="_blank">Contacto</a></li>
-        <li><a class="activo" href="./pages/galeria.html" target="_blank">Galeria</a></li>
+        <li><a class="activo" href="../index.html" target="_blank">Inicio</a></li>
+        <li><a class="activo" href="../pages/seccion.html" target="_blank">Nosotros</a></li>
+        <li><a class="activo" href="../pages/servicios.html" target="_blank">Productos </a></li>
+        <li><a class="activo" href="../pages/contacto.html" target="_blank">Contacto</a></li>
+        <li><a class="activo" href="../pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
 
         </div>
@@ -38,18 +38,18 @@
 
 
 
-        <img src="/img/fiesta1.jpg"   alt="fiesta1" class="mainImg">
+        <img src="../img/fiesta1.jpg"   alt="fiesta1" class="mainImg">
         
     </div>
     <div class="thumbnailContainer">
-    <img  class="thumbnail active" src="/img/fiesta1.jpg"    alt="fiesta1" >
-    <img class="thumbnail" src="/img/fiesta2.jpg"   alt="fiesta2">
-    <img class="thumbnail" src="/img/fiesta3.jpg"   alt="fiesta3">
-    <img class="thumbnail" src="/img/fiesta4.jpg"   alt="fiesta4">
-    <img class="thumbnail" src="/img/fiesta5.jpg"   alt="fiesta5">
-    <img class="thumbnail" src="/img/fiesta6.jpg"   alt="fiesta6">
-    <img class="thumbnail" src="/img/fiesta7.jpg"   alt="fiesta7">
-    <img class="thumbnail" src="/img/fiesta8.jpg"   alt="fiesta8">
+    <img  class="thumbnail active" src="../img/fiesta1.jpg"    alt="fiesta1" >
+    <img class="thumbnail" src="../img/fiesta2.jpg"   alt="fiesta2">
+    <img class="thumbnail" src="../img/fiesta3.jpg"   alt="fiesta3">
+    <img class="thumbnail" src="../img/fiesta4.jpg"   alt="fiesta4">
+    <img class="thumbnail" src="../img/fiesta5.jpg"   alt="fiesta5">
+    <img class="thumbnail" src="../img/fiesta6.jpg"   alt="fiesta6">
+    <img class="thumbnail" src="../img/fiesta7.jpg"   alt="fiesta7">
+    <img class="thumbnail" src="../img/fiesta8.jpg"   alt="fiesta8">
 </div>
 </div>
 </div>
