--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,24 +8,24 @@
     <meta name="description" content="esta es mi primera página web">
     <meta name="keywords" content="mi proyecto final, desarrollo web, gisela soledad avalos">
     <title>Mi proyecto final-Gisela Soledad Avalos</title>
-    <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
         <div class="holder">
-    <img class= "logo-img" src="./img/gatitologo.png" width=100 alt="gatito-img">
+    <img class= "logo-img" src="../img/gatitologo.png" width=100 alt="gatito-img">
     <h1 class="logo"> Irina Style</h1>
 </div>
 </header>
     <nav>
         <div class="activo">
         <ul>
-            <li><a href="./index.html" target="_blank">Inicio</a></li>
-            <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-            <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
-            <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
-            <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
+            <li><a href="../index.html" target="_blank">Inicio</a></li>
+            <li><a href="../pages/seccion.html" target="_blank">Nosotros</a></li>
+            <li><a href="../pages/servicios.html" target="_blank">Productos</a></li>
+            <li><a href="../pages/contacto.html" target="_blank">Contacto</a></li>
+            <li><a href="../pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
     </div>   
     </nav>
@@ -33,7 +33,7 @@
     <div class = "contenedor">
     <div class = "card">
 
-        <img src="./img/percheroespejo.jpg" width=100%   alt="perchero1">
+        <img src="../img/percheroespejo.jpg" width=100%   alt="perchero1">
 
         <div class="contenido">
         <h3>Alquiler de vestidos de fiesta</h3>
@@ -46,7 +46,7 @@
 
 
     <div class="card">
-        <img src="./img/perchero2.jpg" width="100%" alt="perchero2">
+        <img src="../img/perchero2.jpg" width="100%" alt="perchero2">
     <div class="contenido">
         <h3>Alquiler de trajes y esmóquines</h3>
     <p> Ofrecemos alquiler de trajes y esmóquines para  hombres y 
@@ -60,7 +60,7 @@
 
 
     <div class="card">
-        <img src="./img/perchero3.jpg" width="100%" alt="perchero3">
+        <img src="../img/perchero3.jpg" width="100%" alt="perchero3">
     <div class="contenido">
         <h3>Asesoramiento de imagen y estilismo</h3>
     <p> Para aquellos clientes que necesiten ayuda para 
