--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,7 +8,7 @@
     <meta name="description" content="esta es mi primera página web">
     <meta name="keywords" content="mi proyecto final, desarrollo web, gisela soledad avalos">
     <title>Mi proyecto final-Gisela Soledad Avalos</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     </head>
     <body>
@@ -22,10 +22,10 @@
         <div class="activo">
         <ul>
         <li><a class="activo" href="../index.html" target="_blank">Inicio</a></li>
-        <li><a class="activo" href="../pages/seccion.html" target="_blank">Nosotros</a></li>
-        <li><a class="activo" href="../pages/servicios.html" target="_blank">Productos </a></li>
-        <li><a class="activo" href="../pages/contacto.html" target="_blank">Contacto</a></li>
-        <li><a class="activo" href="../pages/galeria.html" target="_blank">Galeria</a></li>
+        <li><a class="activo" href="./pages/seccion.html" target="_blank">Nosotros</a></li>
+        <li><a class="activo" href="./pages/servicios.html" target="_blank">Productos </a></li>
+        <li><a class="activo" href="./pages/contacto.html" target="_blank">Contacto</a></li>
+        <li><a class="activo" href="./pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
 
         </div>
