--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
                 <li><a href="index.html" target="_blank">Inicio</a></li>
-                <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-                <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
-                <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
-                <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
+                <li><a href="/pages/seccion.html" target="_blank">Nosotros</a></li>
+                <li><a href="/pages/servicios.html" target="_blank">Productos</a></li>
+                <li><a href="/pages/contacto.html" target="_blank">Contacto</a></li>
+                <li><a href="/pages/galeria.html" target="_blank">Galeria</a></li>
             </ul>
         </nav>
     </header>
