--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="esta es mi primera página web">
     <title>Mi primera pagina web-Proyecto final </title>
     <meta name="keywords" content="mi primera pagina, desarrollo web, gisela soledad avalos">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https: //fonts.googleapis.com/css2? family= Lato:ital,wght@0,100;0,300;0,400;1,700;1,900 & display=swap" rel="stylesheet"></enlace>
     
@@ -23,10 +23,10 @@
             <button class="cerrar-menu" id="cerrar"><i class="bi bi-x"></i></button>
             <ul class="nav-list">
                 <li><a href="index.html" target="_blank">Inicio</a></li>
-                <li><a href="/pages/seccion.html" target="_blank">Nosotros</a></li>
-                <li><a href="/pages/servicios.html" target="_blank">Productos</a></li>
-                <li><a href="/pages/contacto.html" target="_blank">Contacto</a></li>
-                <li><a href="/pages/galeria.html" target="_blank">Galeria</a></li>
+                <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
+                <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
+                <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
+                <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
             </ul>
         </nav>
     </header>
