--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -8,7 +8,7 @@
     <meta name="description" content="esta es mi primera página web">
     <meta name="keywords" content="mi proyecto final, desarrollo web, gisela soledad avalos">
     <title>Mi proyecto final-Gisela Soledad Avalos</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="/css/estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 <body>
