--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="esta es mi primera página web">
     <title>Mi primera pagina web-Proyecto final </title>
     <meta name="keywords" content="mi primera pagina, desarrollo web, gisela soledad avalos">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https: //fonts.googleapis.com/css2? family= Lato:ital,wght@0,100;0,300;0,400;1,700;1,900 & display=swap" rel="stylesheet"></enlace>
     
