--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -14,18 +14,18 @@
 <body>
     <header>
         <div class="holder">
-    <img class= "logo-img" src="../img/gatitologo.png" width=100 alt="gatito-img">
+    <img class= "logo-img" src="./img/gatitologo.png" width=100 alt="gatito-img">
     <h1 class="logo"> Irina Style</h1>
 </div>
 </header>
     <nav>
         <div class="activo">
         <ul>
-            <li><a href="../index.html" target="_blank">Inicio</a></li>
-            <li><a href="../pages/seccion.html" target="_blank">Nosotros</a></li>
-            <li><a href="../pages/servicios.html" target="_blank">Productos</a></li>
-            <li><a href="../pages/contacto.html" target="_blank">Contacto</a></li>
-            <li><a href="../pages/galeria.html" target="_blank">Galeria</a></li>
+            <li><a href="./index.html" target="_blank">Inicio</a></li>
+            <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
+            <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
+            <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
+            <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
     </div>   
     </nav>
