--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <div class="holder">
-    <img class= "logo-img" src="./img/gatitologo.png" width=100 alt="gatito-img">
+    <div class="holder">
+        <img class= "logo-img" src="../img/gatitologo.png" width=100 alt="gatito-img">
     <h1 class="logo"> Irina Style</h1>
 </div>
 </header>
