--- a/pages/seccion.html
+++ b/pages/seccion.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <div class="holder">
-        <img class= "logo-img" src="../img/gatitologo.png" width=100 alt="gatito-img">
+        <img class= "logo" src="../img/gatitologo.png" width=100 alt="gatito-img">
     <h1 class="logo"> Irina Style</h1>
 </div>
 </header>
