--- a/pages/seccion.html
+++ b/pages/seccion.html
@@ -21,11 +21,11 @@
     <nav>
         <div class="activo">
         <ul>
-        <li><a class="activo" href="./index.html" target="_blank">Inicio</a></li>
-        <li><a class="activo" href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-        <li><a class="activo" href="./pages/servicios.html" target="_blank">Productos </a></li>
-        <li><a class="activo" href="./pages/contacto.html" target="_blank">Contacto</a></li>
-        <li><a class="activo" href="./pages/galeria.html" target="_blank">Galeria</a></li>
+        <li><a class="activo" href="../index.html" target="_blank">Inicio</a></li>
+        <li><a class="activo" href="../pages/seccion.html" target="_blank">Nosotros</a></li>
+        <li><a class="activo" href="../pages/servicios.html" target="_blank">Productos </a></li>
+        <li><a class="activo" href="../pages/contacto.html" target="_blank">Contacto</a></li>
+        <li><a class="activo" href="../pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
 
     </div>
