--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -21,11 +21,11 @@
     <nav>
         <div class="activo">
         <ul>
-            <li><a href="./index.html" target="_blank">Inicio</a></li>
-            <li><a href="./pages/seccion.html" target="_blank">Nosotros</a></li>
-            <li><a href="./pages/servicios.html" target="_blank">Productos</a></li>
-            <li><a href="./pages/contacto.html" target="_blank">Contacto</a></li>
-            <li><a href="./pages/galeria.html" target="_blank">Galeria</a></li>
+            <li><a href="../index.html" target="_blank">Inicio</a></li>
+            <li><a href="../pages/seccion.html" target="_blank">Nosotros</a></li>
+            <li><a href="../pages/servicios.html" target="_blank">Productos</a></li>
+            <li><a href="../pages/contacto.html" target="_blank">Contacto</a></li>
+            <li><a href="../pages/galeria.html" target="_blank">Galeria</a></li>
         </ul>
     </div>   
     </nav>
